Archive2/ed/998fc8c9caa217/output
main.cpp:4:11: error: 'T' was not declared in this scope
 typedef A<T, int> MyPartialSpecializa<T>; 
           ^
main.cpp:4:17: error: template argument 1 is invalid
 typedef A<T, int> MyPartialSpecializa<T>; 
                 ^
main.cpp:4:38: error: expected initializer before '<' token
 typedef A<T, int> MyPartialSpecializa<T>; 
                                      ^
